apod (Astronomy Picture of the Day) Client for #FujiNet
Change Log

 * 2021-06-06
   + Split colorbars into a test version of the APOD app,
     so the main app has a little more breathing room.
   + New viewing mode: medium resolution (160x192) with
     4 colors per scanline (no flickering).

 * 2021-05-27
   + Speak the title of the image.  (Press [V])

 * 2021-05-05
   + Display of image titles at the bottom while viewing
     (only on some viewin gmodes)
   + Show whether saving settings succeeded or failed
   + Slight optimizations here & there, to save a few bytes

 * 2021-05-04
   + Saves and loads settings (Red, Green, Blue hues,
     and APAC luminence) to/from the FujiNet via an App Key
   + (2021-05-04B -- menu bug with fetching the right image type)

 * 2021-05-01
   + First official release:
     - Options to view in: high-res mono, med-res 4-color,
       low-res 16-shade, low-res 4096-color, med-res 64-color,
       and low-res 256-color
     - Pick a date and fetch and view an APOD image
     - Pick a static sample image and fetch and view it
     - Locally (offline) render a test pattern / colorbars
     - Adjust Red, Green, Blue components' hues in 64- & 4096-color modes
     - Adjust Luminence in 256-color mode
