@@ -1,11 +1,13 @@
 apod (Astronomy Picture of the Day) Client for #FujiNet
 Change Log
 
- * 2021-06-06
+ * 2021-06-10
    + Split colorbars into a test version of the APOD app,
      so the main app has a little more breathing room.
    + New viewing mode: medium resolution (160x192) with
      4 colors per scanline (no flickering).
+     (Currently, the server is returning 4 colors per
+     4 scanline chunks.)
 
  * 2021-05-27
    + Speak the title of the image.  (Press [V])
